--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -188,7 +188,7 @@
             <div>
               <strong>Fretwire:</strong> <span id="spec_fretwire"></span><br>
               <strong>Tremolo:</strong> <span id="spec_tremolo"></span><br>
-              <strong>Complexity:</strong> <span id="spec_complexity"></span><br>
+              <!-- <strong>Complexity:</strong> <span id="spec_complexity"></span><br>-->
               <strong>Due Date:</strong> <span id="spec_due"></span>
             </div>
           </div>
