--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -224,6 +224,14 @@
           </div>
         </div>
 
+        <!-- Additional Work -->
+        <div class="section">
+          <div class="section-title">ADDITIONAL WORK PERFORMED</div>
+          <div class="notes-box">
+            Replaced worn nut - customer approved additional charge. Old nut had deep grooves causing string binding. New bone nut properly cut and lubricated. Bridge posts were loose and retightened. Minor fret polish on 1st-5th frets where there was light oxidation.
+          </div>
+        </div>
+
         <!-- Time & Billing Summary (optional) -->
         <div class="section summary-section" id="summarySection" style="display:none;">
           <div class="section-title" style="border:none;margin:0 0 8px 0;padding:0;">TIME & BILLING SUMMARY</div>
