--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -44,29 +44,22 @@
     .section { margin-bottom: 25px; break-inside: avoid; }
     .section-title { font-size: 14px; font-weight: bold; color: #2c3e50; border-bottom: 2px solid #2c3e50; padding-bottom: 3px; margin-bottom: 12px; }
     
-    /* Align sections across columns by matching specific content heights */
+    /* Precise alignment using fixed heights for matching sections */
     .left-column .section:nth-child(2) { /* Instrument Specifications */
+      height: 105px; /* Fixed height to match services performed */
       margin-bottom: 25px;
     }
-    .right-column .section:nth-child(1) { /* Services Performed */
+    .right-column .section:nth-child(1) { /* Services Performed */  
+      height: 105px;
       margin-bottom: 25px;
     }
     .left-column .section:nth-child(3) { /* Customer Request */
+      height: 120px; /* Fixed height to match additional work */
       margin-bottom: 25px;
     }
     .right-column .section:nth-child(2) { /* Additional Work */
+      height: 120px;
       margin-bottom: 25px;
-    }
-    .right-column .section:nth-child(3) { /* Technician Notes */
-      margin-bottom: 25px;
-    }
-    
-    /* Fine-tune alignment by adjusting the instrument specs content */
-    .left-column .section:nth-child(2) .section-title { 
-      margin-bottom: 12px; 
-    }
-    .right-column .section:nth-child(1) .section-title { 
-      margin-bottom: 12px; 
     }
 
     /* Measurements Table */
@@ -93,27 +86,30 @@
     /* Billing Section - Bottom of page */
     .billing-section { 
       background: #f8f9fa; 
-      border: 2px solid #2c3e50; 
+      border: 1px solid #2c3e50; 
       border-radius: 4px; 
-      padding: 20px; 
-      margin-top: 30px;
+      padding: 15px; 
+      margin-top: 20px;
       text-align: center;
+      max-width: 300px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .billing-title { 
-      font-size: 16px; 
+      font-size: 14px; 
       font-weight: bold; 
       color: #2c3e50; 
-      margin-bottom: 15px; 
+      margin-bottom: 10px; 
       text-transform: uppercase; 
     }
     .billing-amount { 
-      font-size: 24px; 
+      font-size: 18px; 
       font-weight: bold; 
       color: #2c3e50; 
-      border: 2px solid #2c3e50;
-      padding: 10px;
+      border: 1px solid #2c3e50;
+      padding: 8px 15px;
       display: inline-block;
-      min-width: 120px;
+      min-width: 100px;
     }
 
     /* Print Button */
