--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -255,7 +255,7 @@
 
         <!-- Notes Section -->
         <div class="section">
-          <div class="section-title">TECHNICIAN NOTES</div>
+          <div class="section-title">NOTES</div>
           <div class="notes-box" id="techNotesBox"></div>
         </div>
       </div>
