--- a/project-management.html
+++ b/project-management.html
@@ -242,7 +242,7 @@
         fretwire: '',
         // Initialize actions
         actions: {},
-        additionalActions: ''
+        additionalActions: '',
         notes: ''
       };
 
