--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -331,7 +331,7 @@
     setText('additionalWorkBox', p.additionalActions || '');
 
     // Technician Notes - Future connection to new notes field
-    setText('techNotesBox', p.Notes || '');
+    setText('techNotesBox', p.notes || '');
 
     // Actions (Standard Actions)
     const a = p.actions || {};
