--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -19,7 +19,7 @@
       display: flex; align-items: center; justify-content: space-between;
     }
     .logo-section {
-      flex: 0 0 120px; height: 80px; background: #f8f9fa; border: 2px dashed #ccc;
+      flex: 0 0 120px; height: 80px; background: #f8f9fa; border: 2px double #ccc;
       display: flex; align-items: center; justify-content: center; font-size: 10px; color: #666; text-align: center;
     }
     .company-info { flex: 1; text-align: center; margin: 0 20px; }
