--- a/project-management.html
+++ b/project-management.html
@@ -721,10 +721,8 @@
             </div>
             
           <div class="form-group" style="margin-top:15px;">
-  <label>Notes</label>
-  <textarea id="notes" onchange="markChanged()" placeholder="General project notes, updates, or reminders...">
-    ${escapeHtml(currentProject.notes || '')}
-  </textarea>
+          <label>Notes</label>
+            <textarea id="notes" onchange="markChanged()" placeholder="General project notes, updates, or reminders...">${escapeHtml(currentProject.notes || '')}</textarea>
 </div>
 
 </div>
