--- a/luthier_report_template.html
+++ b/luthier_report_template.html
@@ -59,8 +59,17 @@
     .checkbox { width: 12px; height: 12px; border: 1px solid #666; display: inline-block; position: relative; }
     .checkbox.checked::after { content: '✓'; position: absolute; left: 1px; top: -2px; font-size: 10px; font-weight: bold; }
 
-    /* Notes Section */
-    .notes-box { border: 1px solid #dee2e6; min-height: 80px; padding: 10px; background: #fafafa; font-size: 11px; line-height: 1.5; white-space: pre-wrap; }
+    .notes-box { 
+  border: 1px solid #dee2e6; 
+  min-height: 80px; 
+  padding: 10px; 
+  background: #fafafa; 
+  font-size: 11px; 
+  line-height: 1.5; 
+  white-space: pre-wrap; 
+  text-align: left; 
+  vertical-align: top; 
+}
 
     /* Signature Section */
     .signature-section { margin-top: 30px; border-top: 1px solid #dee2e6; padding-top: 15px; display: grid; grid-template-columns: 1fr 1fr; gap: 40px; }
